# leaf-playground

./: .editorconfig  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: manually_release.yaml  manually_release_and_upload_package.yaml
examples/: run_dsqa_simulation.py  run_gaokao_bench_simulation.py  run_general_mcq_examine.py  run_rag_qa.py  run_who_is_the_spy.py
src/leaf_playground/: _config.py  _schema.py  _type.py  agent.py  engine.py  scene.py
src/leaf_playground/agent_new/: base.py  hf_agent.py  oai_agent.py
src/leaf_playground/ai_backend/: base.py  huggingface.py  openai.py
src/leaf_playground/app/: app.py  const.py
src/leaf_playground/chart/: bar.py  base.py  pie.py
src/leaf_playground/chart_tools/: base_vega_chart.py  grouped_bar.py  grouped_normalized_bar.py  simple_bar.py
src/leaf_playground/core/: scene.py  scene_agent.py  scene_engine.py  scene_evaluator.py  scene_info.py
src/leaf_playground/core/scene_definition/: __init__.py  scene_definition.py
src/leaf_playground/core/scene_evaluator/: __init__.py  scene_evaluator.py
src/leaf_playground/core/scene_observer/: __init__.py  metric_evaluator.py  metric_reporter.py
src/leaf_playground/core/workers/: __init__.py  chart.py  evaluator.py  logger.py  reporter.py  socket_handler.py
src/leaf_playground/data/: base.py  environment.py  game_event.py  log_body.py  media.py  message.py  metric.py  profile.py  socket_data.py  tool.py
src/leaf_playground/engine/: base.py
src/leaf_playground/eval_tools/: base.py  general_open.py  regex.py
src/leaf_playground/llm_backend/: base.py  huggingface.py  openai.py
src/leaf_playground/metric/: __init__.py  base.py
src/leaf_playground/scene/: base.py  base_new.py
src/leaf_playground/utils/: import_util.py  thread_util.py  type_util.py
src/leaf_playground/zoo/dataset_qa/: agent.py  dataset_utils.py  engine.py  scene.py
src/leaf_playground/zoo/gaokao_bench/: agent.py  dataset.py  engine.py  scene.py
src/leaf_playground/zoo/general_mcq_examine/: dataset_utils.py  scene.py  scene_agent.py  scene_evaluator.py  scene_info.py
src/leaf_playground/zoo/rag_qa/: dataset_utils.py  scene.py  scene_agent.py  scene_evaluator.py  scene_info.py
src/leaf_playground_cli/: main.py  service.py  utils.py
src/leaf_playground_cli/project_completion/: __init__.py  pipeline.py
src/leaf_playground_cli/server/: _type.py  app.py  hub.py  task.py  utils.py
src/leaf_playground_cli/templates/: cookiecutter.json  leaf_project_app.py
src/leaf_playground_cli/utils/: debug_utils.py
(+67 files in other folders)
