[tool.poetry]
name = "leaf-playground"
version = "0.2.0.dev0"
description = ""
authors = [
    "The LEAF team (past and future) with the help of all our contributors <leaf@shanda.com>",
]
readme = "README.md"
packages = [
    { include = "leaf_playground", from = "src"},
    { include = "leaf_playground_cli", from = "src"}
]

[tool.poetry.scripts]
leaf-out = "leaf_playground_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
datasets = "^2.15.0"
openai = "^1.0.0"
torch = "^2.0.0"
transformers = {extras = ["agent"], version = "^4.36.2"}
sentencepiece = "^0.1.99"
accelerate = "^0.25.0"
fastapi = {extras = ["all"], version = "^0.105.0"}
tiktoken = "^0.5.2"
ragas = "^0.0.22"
typer = {extras = ["all"], version = "^0.9.0"}
cookiecutter = "^2.5.0"
altair = "^5.2.0"
vega-datasets = "^0.9.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
