[tool.poetry]
name = "leaf-playground"
version = "0.4.3"
description = "A framework to build scenario simulation projects where human and LLM based agents can participant in, with a user-friendly web UI to visualize simulation, support automatically evaluation on agent action level."
authors = [
    "The LEAF team (past and future) with the help of all our contributors <leaf@shanda.com>",
]
readme = "README.md"
packages = [
    { include = "leaf_playground", from = "src"},
    { include = "leaf_playground_cli", from = "src"}
]

[tool.poetry.scripts]
leaf-out = "leaf_playground_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
aiohttp = "^3.9.1"
openai = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.105.0"}
typer = {extras = ["all"], version = "^0.9.0"}
sqlmodel = "^0.0.14"
SQLAlchemy = {extras = ["asyncio"], version = ">=2.0.0,<2.1.0"}
aiosqlite = "^0.19.0"
cookiecutter = "^2.5.0"
altair = "^5.2.0"
jinja2 = "^3.1.2"
sglang = {extras = ["openai"], version= "^0.1.7"}
# transformers extra
torch = "^2.0.0"
transformers = {extras = ["agent"], version = "^4.36.2"}
sentencepiece = "^0.1.99"
accelerate = "^0.25.0"
# postgre extra
asyncpg = "^0.29.0"

[tool.poetry.extras]
transformers = ["torch", "transformers", "sentencepiece", "accelerate"]

[tool.black]
line-length = 119
extend-exclude = "(src/leaf_playground_cli/templates)"
skip-magic-trailing-comma = true
safe = true
required-version = "23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
